# HallA-Online-Tritium

./: hellow.html  replay
nnL_replay/: .#gogogo.py  DB  def_nnL.h  replay.py  replay_coinc_new.C  sourceme.sh
replay/: #def_tritium.h#  ReplayCore64.C  def_tritium.h  onlinePlots  replay.sh  replay_coinc_new.C  replay_coinc_new_bg.C  sourceme.sh  sourceme_myPC.sh
replay/ana/: .gitattributes  hrs_geant  matrix  rootfiles
replay/ana/Targ_20190203/: CMakeLists.txt
replay/ana/Targ_20190203/analysis/: momloss.cc
replay/ana/Targ_20190203/analysis/kine/: CreateSeed.py  const.hh
replay/ana/Targ_20190203/include/: TARGDetectorConstruction.hh  TARGMinEkineCuts.hh  TARGPrimaryGeneratorAction.hh  TARGRunAction.hh
replay/ana/Targ_20190203/run/images/vrml/: g4_00.wrl  g4_03.wrl  g4_11.wrl  g4_14.wrl  g4_19.wrl  g4_20.wrl  g4_21.wrl  g4_27.wrl  g4_31.wrl  g4_34.wrl  g4_39.wrl  g4_40.wrl  g4_44.wrl  g4_45.wrl  g4_47.wrl  g4_52.wrl  g4_60.wrl
replay/ana/Targ_20190203/run/input/: param_b.in  param_l.in
replay/ana/Targ_20190203/run/macro/: oglx.mac  run.mac  vis.mac  vrml.mac
replay/ana/Targ_20190203/src/: TARGEventAction.cc  TARGPrimaryGeneratorAction.cc  TARGvdHit.cc  TARGvdSD.cc
replay/onlineGUI64/: GetRootFileName.C  LHRS_online.cfg  RHRS_online.cfg
replay_bg/: def_tritium.h  sourceme.sh
replay_bg/ana/: pdf  rootfiles
replay_ole0/: ReplayCore64_C.d  ReplayCore64_C_ACLiC_dict_rdict.pcm  def_nnL.h  gen_maruhadaka_dat.py  gogogo.py  replay_coinc_new_C_ACLiC_dict_rdict.pcm  singleout.cc
replay_ole0/Rootfiles/: Makefile  charge.cc  charge.py  charge_int.cc  maruhadaka  maruhadakaL  maruhadakaR  matrices  merge_rootfiles.cc  tosmall.py
replay_ole0/libTriton/: ClockCountEvtHandler.d  Makefile  TdcDataEvtHandler.d  TriBCM.d  TriFadcAerogelC.d  TriFadcBPM.d  TriFadcCherenkov.d  TriFadcRaster.d  TriFadcRasteredBeam.d  TriFadcScin.d  TriFadcScinF1.d  TriFadcShower.d  TriFadcUnRasteredBeam.d  TriFadcXscin.cxx  TriFadcXscin.d  TriHRS.d  TriNonTrackingDetector.d  TriScalerEvtHandler.d  TriScintillator.d  TriSpectrometer.d  TriSpectrometerDetector.d  TriTrack.d  TriTrackID.d  TriTrackInfo.d  TriTrackProj.d  TriTrackingDetector.d  TriTrackingModule.d  TriTriggerTime.d  TriVDC.d  TriVDCAnalyticTTDConv.d  TriVDCCluster.d  TriVDCHit.d  TriVDCPlane.d  TriVDCTimeToDistConv.d  TriVDCTrackID.d  (+21 more)
(+1101 files in other folders)
